<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_home">Álbumes</string>
    <string name="title_artista">Artistas</string>
    <string name="title_collector">Coleccionistas</string>
    <string name="detail_album_title">Detalle del álbum</string>
    <string name="description_img_photo">Imagen del album</string>
    <string name="description_img_photo_artista">Imagen del artista</string>
    <string name="detail_artista_title">Detalle del artista</string>
    <string name="title_albums">Consulta de Álbumes</string>
    <string name="title_artistas">Consulta de Artistas</string>
    <string name="title_collectors">Consulta de Coleccionistas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_no_comments">No hay comentarios</string>
    <string name="title_comments">Comentarios</string>
    <string name="imagen_del_album">Imagen del album</string>
    <string name="btn_ver_comentarios">Ver comentarios</string>
    <string name="descripcion_album">Item album</string>
    <string name="descripcion_coleccionista">Item coleccionista</string>
    <string name="title_register_album">Registrar Album</string>
    <string name="hint_name_album">Nombre del álbum</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_cover_url">URL de la caratula</string>
    <string name="edit_album_message_valid">Campos invalidos</string>
    <string name="menu_save">Guardar</string>
    <string name="hint_genre_album">Genero</string>
    <string name="hint_record_album">Sello discografico</string>
    <string name="hint_date_album">Fecha de lanzamiento (aaaa-mm-dd)</string>
    <string name="hint_description_album">Descripcion</string>
    <string name="msg_save_album">Se guardo el álbum correctamente</string>
    <string name="detail_collector_title">Detalle coleccionista</string>
    <string name="title_register_track">Asociar canción</string>
    <string name="hint_name_cancion">Nombre de la canción</string>
    <string name="hint_duration_track">Duración</string>
    <string name="btn_add_track">Asociar Canción</string>
    <string name="date_release_invalid">La fecha de lanzamiento del álbum es invalida. El formato de fecha es aaaa-mm-dd</string>
    <string name="msg_save_track">Se guardo la canción correctamente</string>
    <string name="value_textview">Prueba text view</string>
    <string-array name="generos">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="recordlabel">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
</resources>

