<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.uniandes.vinilo.ui.album.AlbumFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_album" />

    <fragment
        android:id="@+id/navigation_artista"
        android:name="com.uniandes.vinilo.ui.artista.ArtistaFragment"
        android:label="@string/title_artista"
        tools:layout="@layout/fragment_artista" />

    <fragment
        android:id="@+id/navigation_collector"
        android:name="com.uniandes.vinilo.ui.collector.CollectorFragment"
        android:label="@string/title_collector"
        tools:layout="@layout/fragment_collector" />
</navigation>